Thu Jul 24 16:14:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mouse-properties.c (setup_dialog): remove the float_to_int
	conversion as the peditor already does that.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-17  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-mouse-properties.glade:  HIGify dialog and fix 
	ui-review bug 99532: remove help text from the dialog; 
	s/Delay/Timeout; remove frames and use HIGified categories;
	change check box text to "Highlight the pointer when you 
	press Ctrl"; change the cursor theme's note to "<i><small><b>
	Note:</b> Changes to theis setting will not take effect until 
	you next log in.</small><i>"; and fix widget padding.
	    
2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: (read_cursor_font), (setup_dialog):
	Plug a couple of leaks.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-25  Rajkumar Sivasamy <rajkumar.siva@wipro.com>

	* gnome-mouse-properties.c: Register mouse double click images
	as stock icons, so that they are themable.
	Fixes bug 96081

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* mouse.desktop.in: Fix the desktop file so that it validates.
