@@ -1,3 +1,8 @@
+Fri Aug  1 13:06:04 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-mouse-properties.c (create_dialog): add support for
+	Xcursors.
+
 Thu Jul 24 16:14:33 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-mouse-properties.c (setup_dialog): remove the float_to_int
